codec: avcodec: set low delay on low fps

fixes non frame output with low fps videos

refs #20740